--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,15 @@
 .nav-bar{
     display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    gap: 2rem;
     width: auto;
     height: 70px;
     background-color: #f0f0f0;
 }
-.start{
-    margin-left: 100px;
-    padding: 5px;
-}
-p{
-    margin-left: 30px;
-    padding: 10px;
-}
 .cart{
-    height: 50px;
-    margin-left: 600px;
-    margin-top: 10px;
-    font-size: large;
+    display: flex;
+    justify-content: flex-end;
 }
 .sub-topic{
     display: flex;
@@ -31,8 +24,9 @@ p{
 .boxes{
     width: auto;
     height: auto;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
     justify-content: center;
 }
 .dimensions{
@@ -73,11 +67,10 @@ p{
 }
 .product-rupees{
     margin-top: 0;
-    margin-right: 35px;
+    margin-right: 5px;
 }
 .buy{
     height: 100x;
-
 }
 .footer{
     margin-top: 80px;
@@ -89,8 +82,8 @@ p{
     justify-content: center;
     align-items: center;
 }
-.product-button{
-    position: absolute;
-    left: 24%;
-    top: 70%;
+.productButton{
+    width: 200px;
+    position: relative;
+    left: 23px;
 }
